Add shared module and layout component

--- a/frontend/src/app/shared/layout/header.component.html
+++ b/frontend/src/app/shared/layout/header.component.html
@@ -10,4 +10,6 @@
   <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
     <mat-icon>share</mat-icon>
   </button>
+  <button routerLink="">Home</button>
+  <button routerLink="/users">Users</button>
 </mat-toolbar>
