Add UI for article

--- a/frontend/src/app/shared/layout/header.component.html
+++ b/frontend/src/app/shared/layout/header.component.html
@@ -12,4 +12,5 @@
   </button>
   <button routerLink="">Home</button>
   <button routerLink="/users">Users</button>
+  <button routerLink="/articles">Articles</button>
 </mat-toolbar>
